upade commonplace page

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
         <a href="vendor_locations.html">Vendor Locations</a>
     </div>
 
-    <h1 align="center">Welcome to CommonPlace!</h1>
+    <h1 align="center">Welcome to CommonPlace cole!</h1>
 
 </head>
 <h2> Home Page </h2>
