integrated basic styles to all pages

--- a/public/index.html
+++ b/public/index.html
@@ -75,10 +75,14 @@
 <p>This page allows users to view, add, edit and delete locations!</p>
 <h2> Customers Page </h2>
 <p>This page allows users to view, add, edit and delete customers!</p>
-<h2> Events Page </h2>
-<p>This page allows users to view, add, edit and delete events!</p>
 <h2> Vendors Page </h2>
 <p>This page allows users to view, add, edit and delete vendors!</p>
-
-
+<h2> Events Page </h2>
+<p>This page allows users to view, add, edit and delete events!</p>
+<h2>Customer Memberships</h2>
+<p>View, Add, Edit and Delete records of Customer Memberships at a given Location!</p>
+<h2>Membership Add-Ons</h2>
+<p>View, Add, and Delete Add-On codes that correspond to Customer Memberships!</p>
+<h2>Vendor Locations</h2>
+<p>View, Add, Edit and Delete records of Vendors renting space at a given Location!</p>
 </html>
