--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,16 @@
     p {
         text-align: center;
     }
+    nav>a {
+        border: 1pt solid lightgray;
+  }
+  nav>a:hover {
+        border: 1pt solid black;
+}
 </style>
 
 <head>
-    <div align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
+    <nav align="center" style=" padding-bottom: 10pt; padding-top: 10pt; width:50%; margin-right:25%; margin-left:25%">
         <a href="index.html">Home Page</a>
         <a href="/locations">Locations</a>
         <a href="/customers">Customers</a>
@@ -63,7 +69,7 @@
         <a href="/customer-memberships">Customer Memberships</a>
         <a href="/membership-add-ons">Membership Add Ons</a>
         <a href="/vendor-locations">Vendor Locations</a>
-    </div>
+    </nav>
 
     <h1 align="center">Welcome to CommonPlace!</h1>
 
